--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://coccinelle-et-libellule.org/'
+baseURL = 'https://coccinelle-et-libellule.fr/'
 languageCode = 'fr'
 title = 'Coccinelle & Libellule'
 
