fix: update contact email

--- a/hugo.toml
+++ b/hugo.toml
@@ -59,4 +59,4 @@ showContactIcons = false
 keywords = "camping, tarbes, agroecologie, ateliers, permaculture, apiculture"
 
 [params.contact]
-email = "contact@coccinelle-et-libellule.org"
+email = "contact@coccinelle-et-libellule.fr"
